# msms

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.release/: msms.key  msms.key.pub
docs/: ARCHITECTURE.md  CONTRIBUTING.md  HANDBOOK.md  MVP_RELEASE_READINESS.md  OPERATOR_GUIDE.md  RELEASE.md  SECURITY.md
docs/adr/: 0001-tauri-rust-react.md
scripts/: bootstrap-github-org-repo.mjs  check-github-org.mjs  extract-release-notes.mjs  github-org-config.mjs  prepare-tauri-config.mjs  publish-github-pages-feed.mjs  release-preflight.mjs  stable-release-dry-run.mjs  validate-release.mjs  verify-github-release.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/tests/: service_flow.rs
src/components/: AuthGate.tsx  BackupsPanel.test.tsx  BackupsPanel.tsx  ConsolePanel.test.tsx  ConsolePanel.tsx  ProvisionWizard.test.tsx  ProvisionWizard.tsx  RuntimePanel.tsx  ServerConfigPanel.tsx  ServerTable.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.tsx  StatCard.tsx  UpdateNotice.test.tsx  UpdateNotice.tsx
src/lib/: tauri.ts
src/store/: appStore.test.tsx  (+1 more)
(+3 files in other folders)
