[package]
name = "msms"
version = "0.1.0"
description = "Minecraft Server Management System"
authors = ["Alex Taylor"]
edition = "2021"

[lib]
name = "msms"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"
flate2 = "1.1.0"
keyring = { version = "3.6.1", features = ["apple-native", "linux-native", "windows-native"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
semver = "1.0.25"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-updater = "2.0.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tar = "0.4.44"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
which = "7.0.2"
zip = "2.2.2"

[dev-dependencies]
tempfile = "3.17.1"
